# backyard

./: .gitignore  .npmignore  Cargo.toml  LICENCE  LICENSE  README.md  index.d.ts  index.js  package-lock.json  package.json  test.mjs
crates/backyard/: Cargo.toml  package.json
crates/backyard-generator/: Cargo.toml  README.md
crates/backyard-generator/benches/: generator.rs
crates/backyard-generator/src/: error.rs  generator.rs  lib.rs  test_utils.rs
crates/backyard-generator/src/internal/: array.rs  arraylookup.rs  assignment.rs  attribute.rs  bin.rs  block.rs  call.rs  class.rs  comment.rs  consts.rs  declare.rs  dowhile.rs  echo.rs  elvis.rs  enums.rs  eval.rs  exit.rs  foreach.rs  fors.rs  function.rs  globals.rs  halt.rs  identifier.rs  ifs.rs  include.rs  instanceof.rs  interface.rs  label.rs  list.rs  magic.rs  matchs.rs  method.rs  mod.rs  namespace.rs  number.rs  objectaccess.rs  parenthesis.rs  post.rs  pre.rs  program.rs  (+15 more)
crates/backyard-generator/tests/: array.rs  arraylookup.rs  assignment.rs  attribute.rs  bin.rs  block.rs  call.rs  class.rs  comment.rs  consts.rs  declare.rs  dowhile.rs  echo.rs  enums.rs  eval.rs  exit.rs  foreach.rs  fors.rs  functions.rs  global.rs  halt.rs  ifs.rs  include.rs  interface.rs  label.rs  list.rs  magic.rs  matchs.rs  method.rs  namespace.rs  number.rs  objectaccess.rs  parenthesis.rs  pre.rs  property.rs  singles.rs  staticlookup.rs  statics.rs  string.rs  switch.rs  (+9 more)
crates/backyard-generator/tests/snapshots/: array__basic.snap  array__complex.snap  array__short.snap  array__with_key.snap  arraylookup__basic.snap  arraylookup__no_expr.snap  assignment__basic.snap  attribute__basic.snap  attribute__multiple.snap  attribute__multiple_items.snap  attribute__with_argument.snap  attribute__with_named_argument.snap  bin__basic.snap  bin__chained.snap  block__basic.snap  block__nested.snap  call__basic.snap  call__named_argument.snap  call__parenthesis.snap  class__anonymous.snap  class__anonymous_extended.snap  class__basic.snap  class__extended.snap  class__modifiers.snap  class__parameter.snap  comment__after_block.snap  comment__at_block_end.snap  comment__at_statement_end.snap  comment__before_block.snap  comment__block.snap  comment__doc.snap  comment__line_basic.snap  comment__line_long.snap  consts__basic.snap  consts__property.snap  consts__with_type.snap  declare__basic.snap  declare__with_body.snap  declare__with_short_body.snap  dowhile__basic.snap  (+117 more)
crates/backyard-lexer/: Cargo.toml  README.md
crates/backyard-lexer/benches/: lexer.rs
crates/backyard-lexer/examples/: lexer.rs  profile.rs
crates/backyard-lexer/src/: error.rs  lexer.rs  lib.rs  token.rs  utils.rs
crates/backyard-lexer/src/internal/: comment.rs  inline.rs  keywords.rs  magics.rs  mod.rs  number.rs  objectaccess.rs  string.rs  types.rs  variable.rs
crates/backyard-lexer/tests/: comment.rs  error.rs  inline.rs  keywords.rs  lexer.rs  number.rs  string.rs  variable.rs
crates/backyard-lexer/tests/snapshots/: comment__block.snap  comment__doc.snap  comment__doc_param_description.snap  comment__doc_param_no_var.snap  comment__doc_param_type_1.snap  comment__doc_param_type_10.snap  comment__doc_param_type_11.snap  comment__doc_param_type_12.snap  comment__doc_param_type_13.snap  comment__doc_param_type_14.snap  comment__doc_param_type_15.snap  comment__doc_param_type_16.snap  comment__doc_param_type_17.snap  comment__doc_param_type_18.snap  comment__doc_param_type_19.snap  comment__doc_param_type_2.snap  comment__doc_param_type_20.snap  comment__doc_param_type_21.snap  comment__doc_param_type_22.snap  comment__doc_param_type_23.snap  comment__doc_param_type_24.snap  comment__doc_param_type_25.snap  comment__doc_param_type_26.snap  comment__doc_param_type_27.snap  comment__doc_param_type_28.snap  comment__doc_param_type_29.snap  comment__doc_param_type_3.snap  comment__doc_param_type_30.snap  comment__doc_param_type_31.snap  comment__doc_param_type_32.snap  comment__doc_param_type_33.snap  comment__doc_param_type_34.snap  comment__doc_param_type_35.snap  comment__doc_param_type_36.snap  comment__doc_param_type_37.snap  comment__doc_param_type_38.snap  comment__doc_param_type_39.snap  comment__doc_param_type_4.snap  comment__doc_param_type_40.snap  comment__doc_param_type_41.snap  (+139 more)
crates/backyard-nodes/: Cargo.toml  README.md
crates/backyard-nodes/src/: builder.rs  clone_in.rs  lib.rs  node.rs  printer.rs  serde.rs  utils.rs  visitor.rs  walker.rs
crates/backyard-nodes/src/macros/: cast.rs
crates/backyard-nodes/src/serde/: deserialize.rs  mod.rs  node.rs  serialize.rs
crates/backyard-nodes/src/snapshots/: backyard_nodes__builder__tests__builder.snap
crates/backyard-nodes/tests/: node.rs
crates/backyard-parser/: Cargo.toml  README.md
crates/backyard-parser/benches/: parser.rs
crates/backyard-parser/examples/: parser.rs  profile.rs
crates/backyard-parser/src/: error.rs  guards.rs  lib.rs  macros.rs  parser.rs  utils.rs
crates/backyard-parser/src/internal/: array.rs  arraylookup.rs  assignment.rs  attribute.rs  bin.rs  block.rs  call.rs  class.rs  comment.rs  consts.rs  declare.rs  dowhile.rs  echo.rs  elvis.rs  enums.rs  eval.rs  exit.rs  foreach.rs  fors.rs  function.rs  globals.rs  halt.rs  identifier.rs  ifs.rs  include.rs  instanceof.rs  interface.rs  label.rs  list.rs  magic.rs  matchs.rs  method.rs  mod.rs  namespace.rs  number.rs  objectaccess.rs  parenthesis.rs  post.rs  pre.rs  program.rs  (+15 more)
crates/backyard-parser/tests/: array.rs  arraylookup.rs  assignment.rs  attribute.rs  bin.rs  block.rs  call.rs  class.rs  comment.rs  consts.rs  declare.rs  dowhile.rs  echo.rs  enums.rs  error.rs  eval.rs  exit.rs  foreach.rs  fors.rs  functions.rs  global.rs  halt.rs  ifs.rs  include.rs  interface.rs  label.rs  list.rs  magic.rs  matchs.rs  method.rs  namespace.rs  number.rs  objectaccess.rs  parenthesis.rs  parser.rs  pre.rs  property.rs  singles.rs  staticlookup.rs  statics.rs  (+11 more)
crates/backyard-parser/tests/snapshots/: array__basic.snap  array__complex.snap  (+160 more)
crates/backyard/src/: lib.rs
tests/: Cargo.toml
tests/src/: main.rs
(+191 files in other folders)
