[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
edition = "2021"
authors = ["Alzera Cita <alzeracita23@gmail.com>"]
version = "0.1.5"
repository = "https://github.com/Alzera/backyard"
license = "MIT"

[workspace.dependencies]
backyard-lexer = { version = "0.1.5", path = "crates/backyard-lexer" }
backyard-nodes = { version = "0.1.5", path = "crates/backyard-nodes" }
backyard-parser = { version = "0.1.5", path = "crates/backyard-parser" }
backyard-generator = { version = "0.1.5", path = "crates/backyard-generator" }
backyard = { version = "0.1.5", path = "crates/backyard" }

ts-rs = "10.0"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
wasm-bindgen = "0.2.95"
serde_json = "1.0"
criterion = { version = "0.5", features = ["html_reports"] }
insta = { version = "1.38.0", features = ["yaml"] }

[profile.release]
lto = true
strip = "symbols"
opt-level = "z"
codegen-units = 1

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3