[workspace]
resolver = "2"
members = ["crates/*", "tests"]

[workspace.package]
edition = "2021"
authors = ["Alzera Cita <alzeracita23@gmail.com>"]
version = "0.1.9"
keywords = ["php", "parser"]
repository = "https://github.com/Alzera/backyard"
license = "MIT"

[workspace.lints.rust]
# unused_must_use = "deny"

[workspace.lints.clippy]
vec_box = "allow"
needless_lifetimes = "allow"

# unwrap_used = "deny"
# expect_used = "deny"
# panic = "deny"

[workspace.dependencies]
# crates
backyard-lexer = { version = "0.1.9", path = "crates/backyard-lexer" }
backyard-nodes = { version = "0.1.9", path = "crates/backyard-nodes" }
backyard-parser = { version = "0.1.9", path = "crates/backyard-parser" }
backyard-generator = { version = "0.1.9", path = "crates/backyard-generator" }
backyard = { version = "0.1.9", path = "crates/backyard" }

compact_str = { version = "0.8.0", features = ["serde"] }
bumpalo = { version = "3.16.0" }

# serializer / deserializer
ts-rs = "10.0"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
wasm-bindgen = "0.2.95"
serde_json = "1.0"

# test
criterion = { version = "0.5", features = ["html_reports"] }
insta = { version = "1.38.0", features = ["yaml"] }
walkdir = "2"

[profile.release]
lto = true
strip = "symbols"
opt-level = "z"
codegen-units = 1

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3
