[package]
name = "tests"
edition.workspace = true
authors.workspace = true
version.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
backyard-lexer = { workspace = true }
backyard-nodes = { workspace = true, features = ["printer", "walker", "builder"] }
backyard-parser = { workspace = true }
backyard-generator = { workspace = true }

bumpalo = { workspace = true }
walkdir = { workspace = true }