[package]
name = "backyard-generator"
description = "Convert AST node back to PHP code."
authors.workspace = true
edition.workspace = true
version.workspace = true
keywords.workspace = true
repository.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
backyard-nodes = { workspace = true }
backyard-parser = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "generator"
harness = false