[package]
name = "backyard-lexer"
description = "Generating tokens representation of PHP code."
authors.workspace = true
edition.workspace = true
version.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
ts-rs = { workspace = true }
serde = { workspace = true }
wasm-bindgen = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "lexer"
harness = false