[package]
name = "backyard-lexer"
description = "Generating tokens representation of PHP code."
authors.workspace = true
edition.workspace = true
version.workspace = true
keywords.workspace = true
repository.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
bumpalo = { workspace = true, features = ["collections", "serde"] }
compact_str = { workspace = true }

serde = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "lexer"
harness = false