[package]
name = "backyard-nodes"
description = "Nodes representing PHP code AST."
authors.workspace = true
edition.workspace = true
version.workspace = true
keywords.workspace = true
repository.workspace = true
license.workspace = true

[features]
builder = []
walker = []

[lints]
workspace = true

[dependencies]
bumpalo = { workspace = true, features = ["boxed", "collections", "serde"] }
compact_str = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
insta = { workspace = true }