[package]
name = "backyard-nodes"
description = "Nodes representing PHP code AST."
authors.workspace = true
edition.workspace = true
version.workspace = true
keywords.workspace = true
repository.workspace = true
license.workspace = true

[features]
builder = []
walker = []
printer = []
serde = ["dep:serde"]

[lints]
workspace = true

[dependencies]
bstr = { workspace = true }
bumpalo = { workspace = true, features = ["boxed", "collections", "serde"] }
serde = { workspace = true, default-features = false, features = ["derive"], optional = true }

[dev-dependencies]
insta = { workspace = true }