[package]
name = "backyard-parser"
description = "Parse PHP code to AST node."
authors.workspace = true
edition.workspace = true
version.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
backyard-lexer = { workspace = true }
backyard-nodes = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "parser"
harness = false