[package]
name = "backyard-parser"
description = "Parse PHP code to AST node."
authors.workspace = true
edition.workspace = true
version.workspace = true
keywords.workspace = true
repository.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
backyard-lexer = { workspace = true }
backyard-nodes = { workspace = true }

bstr = { workspace = true }
bumpalo = { workspace = true, features = ["boxed"] }

[dev-dependencies]
insta = { workspace = true }
criterion = { workspace = true }
backyard-nodes = { workspace = true, features = ["serde"] }

[[bench]]
name = "parser"
harness = false