[package]
name = "backyard"
edition.workspace = true
version.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
backyard-lexer = { workspace = true }
backyard-nodes = { workspace = true }
backyard-parser = { workspace = true }
backyard-generator = { workspace = true }

serde = { workspace = true }
serde-wasm-bindgen = { workspace = true }
wasm-bindgen = { workspace = true }
ts-rs = { workspace = true }